DevOps-Assignment-main/DevOps-Assignment-main/Assignment-1/terraform/main.tf
provider "aws" {
  region = var.region
}

resource "aws_instance" "app" {
  ami           = "ami-0c02fb55956c7d316"
  instance_type = var.instance_type

  vpc_security_group_ids = [aws_security_group.app_sg.id]

  tags = {
    Name = "DevOpsAssignmentApp"
  }
}

resource "aws_security_group" "app_sg" {
  name        = "app-sec-group"
  description = "Allow SSH and 8080 inbound traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
